testsuite/gsksl/errors/duplicate-interpolation-qualifier.frag
in flat noperspective int i;

void
main ()
{
}
